fixing spacing errors

--- a/lesson3/styles/small.css
+++ b/lesson3/styles/small.css
@@ -54,8 +54,9 @@ body{
 p{
     background-color: white;
     padding: 10px;
-    max-width: 50%;
+    max-width: 60%;
     border-radius: 10px;
+    margin: auto;
 }
 
 #social_media_links{
@@ -79,14 +80,26 @@ nav ul {
 h2{
     font-size: 25px;
     color: #1c364b;
+    text-align: center;
+}
+
+.persona {
+    display: grid;
 }
 
 .persona li{
-    display: flex;
+    display: grid;
+    grid-template-columns: 40% 50%;
 }
 
 .persona p{
     margin: 10px;
+    width: 80%;
+}
+
+.persona p:nth-child(1) {
+    align-self: self-start;
+    margin-left: auto;
 }
 
 #design{
